	Fixed: Could not enable service when unit file is a symlink due to 'No such file or directory' error (systemd)
	Fixed: Could not add intermediate SSL certificates; dialog is always skipped (regression fix)
	Fixed: MariaDB SQL server not selectable on fresh install (regression fix)
	Fixed: Missing mysql-common package in MariaDB package sections (Debian Jessie)
	Fixed: When changing panel hostname, DNS zone file is not removed

SERVERS
	Fixed: Cannot connect to VsFTPD when behind NAT (WAN <-> LAN)

VENDOR
	Added: Class::Autouse Perl module version 2.01 from CPAN

------------------------------------------------------------------------------------------------------------------------
1.2.16
------------------------------------------------------------------------------------------------------------------------

2016-03-10: Laurent Declercq
	RELEASE i-MSCP 1.2.16

CONFIG
	Added: /dev/random and /dev/urandom to open_basedir (PHP)

BACKEND
	Added: iMSCP::Service::hasService() method
	Backported: iMSCP::Provider::NetworkInterface from 1.3.x branch - Provider for adding/removing IP addresses
	Backported: iMSCP::Net changes from 1.3.x branch
	Changed: IP addresses are now persistent (they are added into /etc/network/interfaces file)
	Fixed: Could not create SQL user when using MariaDB SQL remote server
	Fixed: Ip addresses are not validated correctly in iMSCP::Net
	Fixed: macvlan interfaces not properly mapped in iMSCP::Net
	Fixed: Shell arguments must be escaped in imscp-pkt-mngr and imscp-sw-mngr

FRONTEND
	Added: SSL status field on domain management page (Client interface)
	Fixed: Could not add/edit SQL user when using MariaDB server - wrong syntax 'PASSWORD EXPIRE NEVER' ...
	Fixed: Exception raised due to missing `ZIP` configuration variable
	Fixed: Wrong error handling in cert_view.php (openssl_x509_checkpurpose function also returns -1 which is not FALSE)

INSTALLER
	Added: 'panel' reconfiguration item